# Air

./: .env  .gitignore  Dockerfile  Readme.md  code_check.sh  compose-prod.yml  compose-test.yml  compose.yml  doc.html  docker-compose.yml  install.sh  pyproject.toml  requirements-dev.txt  requirements-system.txt  requirements.txt  rsync-ignore.txt
.github/workflows/: test.yml
air/: hello.py  manager.py
air/config/: config.py
air/nvs/: nvs.py
air/pi_sense_hat/: pi_sense_hat.py
air/propulsion/: original_calibrage.py  propulsion.py
air/rc/: rc.py  rc_ibus.py
air/servos/: Servos.py
air/sim7600/: sim7600.py
air/utilities/: abstracts.py  component.py  enums.py  ipc.py  logger.py
air/vl53/: vl53.py
apps/IMU/: IMU_test.py  IMU_test_calibrate.py
apps/PicasimAutopilot/: low_level_pid_model.py  main.py  picasim.py  simple_auto_pilot_wing_level.py  test_model.py
apps/renderer/: imu_renderer.py
config/: CalibratedImuConfig.ini  CalibratedKalmanImuConfig.ini  DefaultImuConfig.ini
docs/: requirements.txt
docs/source/: conf.py  index.rst
gnss/: Dockerfile  compose.yml  gnss_utils.py  main.py  test.py
install/: rc.local
src/: .env  gps.py  hello.py  manager.py  nvs.py  rc.py  rcti.py
src/config/: config.py
src/gps/: gps.py
src/laser/: laser.py
src/nemesis_utilities/: code_check.sh  pyproject.toml  setup.cfg
src/nemesis_utilities/utilities/: abstracts.py  component.py  custom_sense_hat.py  ipc.py  logger.py  sense_hat.py
src/nvs/: nvs.py
src/pi_sense_hat/: RTIMULib.ini  compass_calibrated_2_data_30.json  compass_data_30_calibrated.json  compass_non_calibrated_data_10.json  compass_non_calibrated_data_30.json  compass_visualization.py  custom_sense_hat.py  pi_sense_hat.py  test_imu.py
src/propulsion/: Propulsion.py  original_calibrage.py
src/rc/: rc.py  rc_ibus.py
src/sensors/: sensors.py
src/servos/: Servos.py
src/vl53/: vl53.py
utils/: check_rpi_supply_status.sh  imu_renderer.py  pi-sync-shaft-rpi1.sh  pi-sync-shaft-rpi2.sh  pi-sync-shaft4.sh  sync-0xPierre-rpi.sh
(+28 files in other folders)
